// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render TileLockup  Uniform size - Title and subtitle or eyebrow should have same type and style 1`] = `
.c7 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #6f7171;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 4px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h3
        aria-hidden="false"
        class="c2 c3"
      >
        Eyebrow
      </h3>
    </div>
    <div
      class="c4"
    >
      <h1
        aria-hidden="false"
        class="c2 c5"
      >
        Title
      </h1>
    </div>
    <div
      class="c6"
    >
      <h2
        aria-hidden="false"
        class="c2 c7"
      >
        Subtitle
      </h2>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  Uniform size is true and the title is bold, the eyebrow is always regular and has secondary color 1`] = `
.c7 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #6f7171;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 4px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h3
        aria-hidden="false"
        class="c2 c3"
      >
        Eyebrow
      </h3>
    </div>
    <div
      class="c4"
    >
      <h1
        aria-hidden="false"
        class="c2 c5"
      >
        Title
      </h1>
    </div>
    <div
      class="c6"
    >
      <h2
        aria-hidden="false"
        class="c2 c7"
      >
        Subtitle
      </h2>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  Uniform size is true and the title is bold, the eyebrow is always regular and has secondary color Inverted 1`] = `
.c3 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #a7a7a7;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #ffffff;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 4px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h3
        aria-hidden="false"
        class="c2 c3"
      >
        Eyebrow
      </h3>
    </div>
    <div
      class="c4"
    >
      <h1
        aria-hidden="false"
        class="c2 c5"
      >
        Title
      </h1>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  Uniform size is true and the title is regular, the eyebrow is always bold and has primary color 1`] = `
.c5 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #6f7171;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 4px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h3
        aria-hidden="false"
        class="c2 c3"
      >
        Eyebrow
      </h3>
    </div>
    <div
      class="c4"
    >
      <h1
        aria-hidden="false"
        class="c2 c5"
      >
        Title
      </h1>
    </div>
    <div
      class="c6"
    >
      <h2
        aria-hidden="false"
        class="c2 c7"
      >
        Subtitle
      </h2>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  Uniform size is true and the title is regular, the eyebrow is always bold and has primary color Inverted 1`] = `
.c5 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #ffffff;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #ffffff;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 4px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h3
        aria-hidden="false"
        class="c2 c3"
      >
        Eyebrow
      </h3>
    </div>
    <div
      class="c4"
    >
      <h1
        aria-hidden="false"
        class="c2 c5"
      >
        Title
      </h1>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  should render TitleLockup with children 1`] = `
.c6 {
  font-size: 2rem;
  font-weight: 700;
  line-height: 2.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #6f7171;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:active,
.c5:focus,
.c5:hover {
  outline: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 12px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 12px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h3
        aria-hidden="false"
        class="c2 c3"
      >
        Today only.
      </h3>
    </div>
    <div
      class="c4"
    >
      <h1
        aria-hidden="false"
        class="c5 c6"
      >
        And get more of our best
      </h1>
    </div>
    <div
      class="c7"
    >
      <h2
        aria-hidden="false"
        class="c2 c8"
      >
        Get both of our best and pay less. Pair 5G Home Internet with Verizon mobile to save every month.
      </h2>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  should render TitleLockup with data object 1`] = `
.c5 {
  font-size: 2rem;
  font-weight: 700;
  line-height: 2.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  font-size: 1.25rem;
  font-weight: 700;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 12px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 12px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h2
        aria-hidden="false"
        class="c2 c3"
      >
        test content
      </h2>
    </div>
    <div
      class="c4"
    >
      <h2
        aria-hidden="false"
        class="c2 c5"
      >
        test content title
      </h2>
    </div>
    <div
      class="c6"
    >
      <h3
        aria-hidden="false"
        class="c2 c7"
      >
        test content subtitle
      </h3>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  should render TitleLockup with data object and viewport mobile 1`] = `
.c3 {
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  font-family: Verizon-NHG-eTX,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 {
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1rem;
  font-family: Verizon-NHG-eTX,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1.75rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:active,
.c5:focus,
.c5:hover {
  outline: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 8px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h2
        aria-hidden="false"
        class="c2 c3"
      >
        &lt;div&gt;test content&lt;/div&gt;
      </h2>
    </div>
    <div
      class="c4"
    >
      <h2
        aria-hidden="false"
        class="c5 c6"
      >
        test content title
      </h2>
    </div>
    <div
      class="c7"
    >
      <h3
        aria-hidden="false"
        class="c2 c8"
      >
        test content subtitle
      </h3>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  should render TitleLockupTitle properly in mobile 1`] = `
.c2 {
  font-size: 2rem;
  font-weight: 700;
  line-height: 2.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 12px;
}

<div
  class="c0"
>
  <h1
    aria-hidden="false"
    class="c1 c2"
  >
     TitleAccented 
  </h1>
</div>
`;

exports[`Render TileLockup  should render with child type titleLockupEyebrow 1`] = `
.c3 {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h3
        aria-hidden="false"
        class="c2 c3"
      >
        Today only.
      </h3>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  should render with eyebrowPadding 1`] = `
.c3 {
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  font-family: Verizon-NHG-eTX,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 {
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1rem;
  font-family: Verizon-NHG-eTX,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1.75rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:active,
.c5:focus,
.c5:hover {
  outline: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 8px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h2
        aria-hidden="false"
        class="c2 c3"
      >
        test content
      </h2>
    </div>
    <div
      class="c4"
    >
      <h2
        aria-hidden="false"
        class="c5 c6"
      >
        test content title
      </h2>
    </div>
    <div
      class="c7"
    >
      <h3
        aria-hidden="false"
        class="c2 c8"
      >
        test content subtitle
      </h3>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  should render with no child type 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div>
      hello
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  should render with subtitle undefined 1`] = `
.c8 {
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1rem;
  font-family: Verizon-NHG-eTX,Helvetica,Arial,Sans-serif;
  color: #6f7171;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  font-family: Verizon-NHG-eTX,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1.75rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:active,
.c5:focus,
.c5:hover {
  outline: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 8px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h3
        aria-hidden="false"
        class="c2 c3"
      >
        Today only.
      </h3>
    </div>
    <div
      class="c4"
    >
      <h1
        aria-hidden="false"
        class="c5 c6"
      >
        And get more of our best
      </h1>
    </div>
    <div
      class="c7"
    >
      <h2
        aria-hidden="false"
        class="c2 c8"
      >
        Get both of our best and pay less.
      </h2>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  should render with title size as featureSmall and mobile viewport 1`] = `
.c8 {
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1rem;
  font-family: Verizon-NHG-eTX,Helvetica,Arial,Sans-serif;
  color: #6f7171;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  font-family: Verizon-NHG-eTX,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1.75rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:active,
.c5:focus,
.c5:hover {
  outline: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 8px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h3
        aria-hidden="false"
        class="c2 c3"
      >
        Today only.
      </h3>
    </div>
    <div
      class="c4"
    >
      <h1
        aria-hidden="false"
        class="c5 c6"
      >
        And get more of our best
      </h1>
    </div>
    <div
      class="c7"
    >
      <h2
        aria-hidden="false"
        class="c2 c8"
      >
        Get both of our best and pay less.
      </h2>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  should render with title size as titleMedium and desktop viewport 1`] = `
.c8 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #6f7171;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1.75rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:active,
.c5:focus,
.c5:hover {
  outline: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 8px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h3
        aria-hidden="false"
        class="c2 c3"
      >
        Today only.
      </h3>
    </div>
    <div
      class="c4"
    >
      <h1
        aria-hidden="false"
        class="c5 c6"
      >
        And get more of our best
      </h1>
    </div>
    <div
      class="c7"
    >
      <h2
        aria-hidden="false"
        class="c2 c8"
      >
        Get both of our best and pay less.
      </h2>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  should render with title size as titleMedium and mobile viewport 1`] = `
.c8 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #6f7171;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  font-size: 1.25rem;
  font-weight: 700;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:active,
.c5:focus,
.c5:hover {
  outline: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 8px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 8px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h3
        aria-hidden="false"
        class="c2 c3"
      >
        Today only.
      </h3>
    </div>
    <div
      class="c4"
    >
      <h1
        aria-hidden="false"
        class="c5 c6"
      >
        And get more of our best
      </h1>
    </div>
    <div
      class="c7"
    >
      <h2
        aria-hidden="false"
        class="c2 c8"
      >
        Get both of our best and pay less.
      </h2>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  should render with title with featureMedium size 1`] = `
.c3 {
  font-size: 4rem;
  font-weight: 700;
  line-height: 4rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active,
.c2:hover {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h1
        aria-hidden="false"
        class="c2 c3"
      >
        And get more of our best
      </h1>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  should render with title with titleXLarge size in desktop viewport 1`] = `
.c3 {
  font-size: 3rem;
  font-weight: 700;
  line-height: 3rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h1
        aria-hidden="false"
        class="c2 c3"
      >
        And get more of our best
      </h1>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupEyebrow  and TitleLockupSubtitle with size bodyLarge 1`] = `
.c3 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h3
        aria-hidden="false"
        class="c2 c3"
      >
        Today only.
      </h3>
    </div>
    <div
      class="c4"
    >
      <h2
        aria-hidden="false"
        class="c2 c3"
      >
        Get both of our best and pay less.
      </h2>
    </div>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupEyebrow with size bodyMedium 1`] = `
.c2 {
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.125rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #ffffff;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

<div>
  <div
    class="c0"
  >
    <h3
      aria-hidden="false"
      class="c1 c2"
    >
      Today only.
    </h3>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupEyebrow with size titleLarge 1`] = `
.c2 {
  font-size: 2rem;
  font-weight: 300;
  line-height: 2.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.015625rem;
  -moz-letter-spacing: 0.015625rem;
  -ms-letter-spacing: 0.015625rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

<div>
  <div
    class="c0"
  >
    <h3
      aria-hidden="false"
      class="c1 c2"
    >
      Today only.
    </h3>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupEyebrow with size titleXLarge and inverted 1`] = `
.c2 {
  font-size: 2rem;
  font-weight: 300;
  line-height: 2.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.015625rem;
  -moz-letter-spacing: 0.015625rem;
  -ms-letter-spacing: 0.015625rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

<div>
  <div
    class="c0"
  >
    <h3
      aria-hidden="false"
      class="c1 c2"
    >
      Today only.
    </h3>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupSubtitle and  with size bodyLarge 1`] = `
.c2 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #ffffff;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

<div>
  <div
    class="c0"
  >
    <h2
      aria-hidden="false"
      class="c1 c2"
    >
      Get both of our best and pay less.
    </h2>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupSubtitle and  with size bodyMedium 1`] = `
.c2 {
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.125rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

<div>
  <div
    class="c0"
  >
    <h2
      aria-hidden="false"
      class="c1 c2"
    >
      Get both of our best and pay less.
    </h2>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupSubtitle and  with size titleLarge 1`] = `
.c2 {
  font-size: 2rem;
  font-weight: 300;
  line-height: 2.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.015625rem;
  -moz-letter-spacing: 0.015625rem;
  -ms-letter-spacing: 0.015625rem;
  letter-spacing: 0.015625rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

<div>
  <div
    class="c0"
  >
    <h2
      aria-hidden="false"
      class="c1 c2"
    >
      Get both of our best and pay less.
    </h2>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupSubtitle and  with size titleXLarge 1`] = `
.c2 {
  font-size: 2rem;
  font-weight: 300;
  line-height: 2.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.015625rem;
  -moz-letter-spacing: 0.015625rem;
  -ms-letter-spacing: 0.015625rem;
  letter-spacing: 0.015625rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

<div>
  <div
    class="c0"
  >
    <h2
      aria-hidden="false"
      class="c1 c2"
    >
      Get both of our best and pay less.
    </h2>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupTitle and  with size featureMedium 1`] = `
.c2 {
  font-size: 4rem;
  font-weight: 700;
  line-height: 4rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <h1
      aria-hidden="false"
      class="c1 c2"
    >
      Get both of our best and pay less.
    </h1>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupTitle and  with size featureSmall 1`] = `
.c2 {
  font-size: 5rem;
  font-weight: 700;
  line-height: 4.75rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <h1
      aria-hidden="false"
      class="c1 c2"
    >
      Get both of our best and pay less.
    </h1>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupTitle and  with size featureXSmall 1`] = `
.c2 {
  font-size: 4rem;
  font-weight: 700;
  line-height: 4rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #ffffff;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <h1
      aria-hidden="false"
      class="c1 c2"
    >
      Get both of our best and pay less.
    </h1>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupTitle and  with size titleSmall 1`] = `
.c2 {
  font-size: 1.25rem;
  font-weight: 700;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 8px;
}

<div>
  <div
    class="c0"
  >
    <h1
      aria-hidden="false"
      class="c1 c2"
    >
      Get both of our best and pay less.
    </h1>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupTitle and  with size titleXLarge 1`] = `
.c2 {
  font-size: 3rem;
  font-weight: 700;
  line-height: 3rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 16px;
}

<div>
  <div
    class="c0"
  >
    <h1
      aria-hidden="false"
      class="c1 c2"
    >
      Get both of our best and pay less.
    </h1>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupTitle and  with size titleXLarge 2`] = `
.c2 {
  font-size: 2rem;
  font-weight: 700;
  line-height: 2.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 12px;
}

<div>
  <div
    class="c0"
  >
    <h1
      aria-hidden="false"
      class="c1 c2"
    >
      Get both of our best and pay less.
    </h1>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupTitle with size 'bodySmall', 'bodyMedium', 'bodyLarge' 1`] = `
.c2 {
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1rem;
  font-family: Verizon-NHG-eTX,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 4px;
}

<div>
  <div
    class="c0"
  >
    <h1
      aria-hidden="false"
      class="c1 c2"
    >
      Get both of our best and pay less.
    </h1>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupTitle with size 'bodySmall', 'bodyMedium', 'bodyLarge' 2`] = `
.c2 {
  font-size: 0.875rem;
  font-weight: 700;
  line-height: 1.125rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 4px;
}

<div>
  <div
    class="c0"
  >
    <h1
      aria-hidden="false"
      class="c1 c2"
    >
      Get both of our best and pay less.
    </h1>
  </div>
</div>
`;

exports[`Render TileLockup  test TitleLockupTitle with size 'bodySmall', 'bodyMedium', 'bodyLarge' 3`] = `
.c2 {
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 4px;
}

<div>
  <div
    class="c0"
  >
    <h1
      aria-hidden="false"
      class="c1 c2"
    >
      Get both of our best and pay less.
    </h1>
  </div>
</div>
`;

exports[`TitleLockup defaults & textAlignment 1`] = `
.c3 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  font-size: 2rem;
  font-weight: 700;
  line-height: 2.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:active,
.c5:focus,
.c5:hover {
  outline: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 12px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 12px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h3
        aria-hidden="false"
        class="c2 c3"
      >
        Eyebrow
      </h3>
    </div>
    <div
      class="c4"
    >
      <h1
        aria-hidden="false"
        class="c5 c6"
      >
        Title textAlignment
      </h1>
    </div>
    <div
      class="c7"
    >
      <h2
        aria-hidden="false"
        class="c2 c3"
      >
        Subtitle
      </h2>
    </div>
  </div>
</div>
`;

exports[`TitleLockup defaults & textAlignment inverted 1`] = `
.c3 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #ffffff;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  font-size: 2rem;
  font-weight: 700;
  line-height: 2.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #ffffff;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:active,
.c5:focus,
.c5:hover {
  outline: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 12px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 12px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: left;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h3
        aria-hidden="false"
        class="c2 c3"
      >
        Eyebrow
      </h3>
    </div>
    <div
      class="c4"
    >
      <h1
        aria-hidden="false"
        class="c5 c6"
      >
        Title textAlignment
      </h1>
    </div>
    <div
      class="c7"
    >
      <h2
        aria-hidden="false"
        class="c2 c3"
      >
        Subtitle
      </h2>
    </div>
  </div>
</div>
`;

exports[`TitleLockup textAlignment center 1`] = `
.c3 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  font-size: 2rem;
  font-weight: 700;
  line-height: 2.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:active,
.c5:focus,
.c5:hover {
  outline: none;
}

.c2:active,
.c2:focus,
.c2:hover {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 12px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 12px;
  text-align: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h3
        aria-hidden="false"
        class="c2 c3"
      >
        Eyebrow
      </h3>
    </div>
    <div
      class="c4"
    >
      <h1
        aria-hidden="false"
        class="c5 c6"
      >
        Title textAlignment
      </h1>
    </div>
    <div
      class="c7"
    >
      <h2
        aria-hidden="false"
        class="c2 c3"
      >
        Subtitle
      </h2>
    </div>
  </div>
</div>
`;

exports[`TitleLockupEyebrow default 1`] = `
.c2 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

<div
  class="c0"
>
  <h3
    aria-hidden="false"
    class="c1 c2"
  >
    TitleLockupEyebrow default
  </h3>
</div>
`;

exports[`TitleLockupEyebrow default inverted 1`] = `
.c2 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #ffffff;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

<div
  class="c0"
>
  <h2
    aria-hidden="false"
    class="c1 c2"
  >
    TitleLockupEyebrow inverted
  </h2>
</div>
`;

exports[`TitleLockupSubtitle default 1`] = `
.c2 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

<div
  class="c0"
>
  <h2
    aria-hidden="false"
    class="c1 c2"
  >
    TitleLockupSubtitle default
  </h2>
</div>
`;

exports[`TitleLockupSubtitle default inverted 1`] = `
.c2 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #ffffff;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

<div
  class="c0"
>
  <h3
    aria-hidden="false"
    class="c1 c2"
  >
    TitleLockupSubtitle inverted
  </h3>
</div>
`;

exports[`TitleLockupTitle default 1`] = `
.c2 {
  font-size: 2rem;
  font-weight: 700;
  line-height: 2.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 12px;
}

<div
  class="c0"
>
  <h1
    aria-hidden="false"
    class="c1 c2"
  >
    TitleLockupTitle default
  </h1>
</div>
`;

exports[`TitleLockupTitle default inverted 1`] = `
.c2 {
  font-size: 2rem;
  font-weight: 300;
  line-height: 2.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.015625rem;
  -moz-letter-spacing: 0.015625rem;
  -ms-letter-spacing: 0.015625rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:active,
.c1:focus,
.c1:hover {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
  margin-bottom: 12px;
}

<div
  class="c0"
>
  <h2
    aria-hidden="false"
    class="c1 c2"
  >
    TitleLockupTitle inverted
  </h2>
</div>
`;
